--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="what_you_ll_need">What You\'ll Need:</string>
     <string name="how_to_do_it">How To Do It:</string>
     <string name="do_it_like_a_pro">Do It Like a Pro:</string>
+    <string name="week_s_diet">Week\'s Diet:</string>
 </resources>
