--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mealme</string>
+    <string name="app_name">MealMe</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">Login</string>
@@ -15,7 +15,6 @@
     <string name="homePhrase">We\'ve Got Options For You</string>
     <string name="editorsPick">"Editor's Pick For The Day 🖤 "</string>
     <string name="continute_with_google">Continue With Google</string>
-    <string name="client_id">146068718664-fi1qp6qon7v3vourbip1rtf0cji22lo2.apps.googleusercontent.com</string>
     <string name="signOut">Sign Out</string>
     <string name="favourites">Favourites</string>
     <string name="calendar">Calendar</string>
@@ -24,4 +23,5 @@
     <string name="how_to_do_it">How To Do It:</string>
     <string name="do_it_like_a_pro">Do It Like a Pro:</string>
     <string name="week_s_diet">Week\'s Diet:</string>
+    <string name="client_id">146068718664-fi1qp6qon7v3vourbip1rtf0cji22lo2.apps.googleusercontent.com</string>
 </resources>
