checking connectivity done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="do_it_like_a_pro">Do It Like a Pro:</string>
     <string name="week_s_diet">Week\'s Diet:</string>
     <string name="client_id">146068718664-fi1qp6qon7v3vourbip1rtf0cji22lo2.apps.googleusercontent.com</string>
+    <string name="no_connection">No Connection</string>
 </resources>
